cicd: new azure service principle

--- a/infra/azure-pipelines.yml
+++ b/infra/azure-pipelines.yml
@@ -5,7 +5,7 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  azureServiceConnection: 'AllSystemsGoneAzureSP'
+  azureServiceConnection: 'KnowledgeBaseDevOpsSP'
   location: 'westeurope'
 
 steps:
