--- a/infra/azure-pipelines.yml
+++ b/infra/azure-pipelines.yml
@@ -9,6 +9,10 @@ variables:
   location: 'westeurope'
 
 steps:
+  - script: wget https://github.com/gohugoio/hugo/releases/download/v0.109.0/hugo_0.109.0_linux-amd64.deb -O '$(Pipeline.Workspace)/hugo_0.109.0_linux-amd64.deb'
+    displayName: Download Hugo v0.109.0 Linux x64
+  - script: sudo dpkg -i $(Pipeline.Workspace)/hugo*.deb
+    displayName: Install Hugo
   - task: AzureCLI@2
     displayName: '(1) Generate Bicep file for Resource Group (workaround)'
     inputs:
