--- a/infra/azure-pipelines.yml
+++ b/infra/azure-pipelines.yml
@@ -10,7 +10,7 @@ variables:
 
 steps:
   - script: wget https://github.com/gohugoio/hugo/releases/download/v0.109.0/hugo_0.109.0_linux-amd64.deb -O '$(Pipeline.Workspace)/hugo_0.109.0_linux-amd64.deb'
-    displayName: Download Hugo v0.109.0 Linux x64
+    displayName: Download Hugo v0. Linux x64
   - script: sudo dpkg -i $(Pipeline.Workspace)/hugo*.deb
     displayName: Install Hugo
   - task: AzureCLI@2
@@ -45,3 +45,9 @@ steps:
       scriptLocation: inlineScript
       inlineScript: az deployment group create --resource-group rg-knowledgebase --template-file staticwebapp.bicep
       workingDirectory: 'infra'
+  - task: AzureStaticWebApp@0
+    inputs:
+      app_location: '/'
+      app_build_command: 'hugo -D'
+      output_location: '/public'
+      azure_static_web_apps_api_token: '5e7bf57cf9e9f9692941912f119ce7e2513e4ec9bb80f6fb45c6d17f0ed4d73c2-24542874-a48d-4fb9-be59-6c592b142eae003168667'
