--- a/infra/azure-pipelines.yml
+++ b/infra/azure-pipelines.yml
@@ -13,38 +13,38 @@ steps:
     displayName: Download Hugo v0. Linux x64
   - script: sudo dpkg -i $(Pipeline.Workspace)/hugo*.deb
     displayName: Install Hugo
-  - task: AzureCLI@2
-    displayName: '(1) Generate Bicep file for Resource Group (workaround)'
-    inputs:
-      azureSubscription: '$(azureServiceConnection)'
-      scriptType: 'bash'
-      scriptLocation: 'inlineScript'
-      inlineScript: 'bicep build resourcegroup.bicep'
-      workingDirectory: 'infra'
-  - task: AzureCLI@2
-    displayName: '(2) Deploy Resource Group'
-    inputs: 
-      azureSubscription: $(azureServiceConnection)
-      scriptType: bash
-      scriptLocation: inlineScript
-      inlineScript: az deployment sub create --template-file resourcegroup.json --location $(location)
-      workingDirectory: 'infra'
-  - task: AzureCLI@2
-    displayName: '(3) Generate Bicep file for Static Web App (workaround)'
-    inputs:
-      azureSubscription: '$(azureServiceConnection)'
-      scriptType: 'bash'
-      scriptLocation: 'inlineScript'
-      inlineScript: 'bicep build staticwebapp.bicep'
-      workingDirectory: 'infra'
-  - task: AzureCLI@2
-    displayName: '(4) Deploy Static Web App'
-    inputs:
-      azureSubscription: $(azureServiceConnection)
-      scriptType: bash
-      scriptLocation: inlineScript
-      inlineScript: az deployment group create --resource-group rg-knowledgebase --template-file staticwebapp.json
-      workingDirectory: 'infra'
+  # - task: AzureCLI@2
+  #   displayName: '(1) Generate Bicep file for Resource Group (workaround)'
+  #   inputs:
+  #     azureSubscription: '$(azureServiceConnection)'
+  #     scriptType: 'bash'
+  #     scriptLocation: 'inlineScript'
+  #     inlineScript: 'bicep build resourcegroup.bicep'
+  #     workingDirectory: 'infra'
+  # - task: AzureCLI@2
+  #   displayName: '(2) Deploy Resource Group'
+  #   inputs: 
+  #     azureSubscription: $(azureServiceConnection)
+  #     scriptType: bash
+  #     scriptLocation: inlineScript
+  #     inlineScript: az deployment sub create --template-file resourcegroup.json --location $(location)
+  #     workingDirectory: 'infra'
+  # - task: AzureCLI@2
+  #   displayName: '(3) Generate Bicep file for Static Web App (workaround)'
+  #   inputs:
+  #     azureSubscription: '$(azureServiceConnection)'
+  #     scriptType: 'bash'
+  #     scriptLocation: 'inlineScript'
+  #     inlineScript: 'bicep build staticwebapp.bicep'
+  #     workingDirectory: 'infra'
+  # - task: AzureCLI@2
+  #   displayName: '(4) Deploy Static Web App'
+  #   inputs:
+  #     azureSubscription: $(azureServiceConnection)
+  #     scriptType: bash
+  #     scriptLocation: inlineScript
+  #     inlineScript: az deployment group create --resource-group rg-knowledgebase --template-file staticwebapp.json
+  #     workingDirectory: 'infra'
   - task: AzureStaticWebApp@0
     inputs:
       app_location: './'
