--- a/infra/azure-pipelines.yml
+++ b/infra/azure-pipelines.yml
@@ -45,6 +45,10 @@ steps:
   #     scriptLocation: inlineScript
   #     inlineScript: az deployment group create --resource-group rg-knowledgebase --template-file staticwebapp.json
   #     workingDirectory: 'infra'
+  - task: Bash@3
+    inputs:
+      targetType: 'inline'
+      script: 'hugo -s ./src -d ../public'
   - task: AzureStaticWebApp@0
     inputs:
       app_location: './'
