--- a/infra/azure-pipelines.yml
+++ b/infra/azure-pipelines.yml
@@ -45,17 +45,17 @@ steps:
   #     scriptLocation: inlineScript
   #     inlineScript: az deployment group create --resource-group rg-knowledgebase --template-file staticwebapp.json
   #     workingDirectory: 'infra'
-  - task: Bash@3
-    inputs:
-      targetType: 'inline'
-      script: 'hugo -s knowledgebase -d public'
+  # - task: Bash@3
+  #   inputs:
+  #     targetType: 'inline'
+  #     script: 'hugo -s knowledgebase -d public'
   - task: AzureStaticWebApp@0
     inputs:
-      app_location: './knowledgebase/public'
-      app_build_command: 'hugo -D'
+      app_location: '/'
+      app_build_command: 'hugo -s knowledgebase -D'
       output_location: 'public'
       api_location: 'api'
-      skip_app_build: true
+      skip_app_build: false
       skip_api_build: true
-      is_static_export: true
+      is_static_export: false
       azure_static_web_apps_api_token: '5e7bf57cf9e9f9692941912f119ce7e2513e4ec9bb80f6fb45c6d17f0ed4d73c2-24542874-a48d-4fb9-be59-6c592b142eae003168667'
