fix: base url for hugo

--- a/knowledgebase/config.toml
+++ b/knowledgebase/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://jolly-field-0e8c05903.2.azurestaticapps.net"
 theme = "loveit"
 themesDir = "themes"
 title = "Knowledge Base"
