--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -38,6 +38,7 @@ jobs:
 
     
   build_and_deploy_job:
+    needs: provision
     runs-on: ubuntu-latest
     name: Build and Deploy Job
     steps:
