--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -50,8 +50,6 @@ jobs:
         with:
           hugo-version: "0.64.0"
       - name: Build
-        # remove --minify tag if you do not need it
-        # docs: https://gohugo.io/hugo-pipes/minification/
         run: hugo -s knowledgebase -D --minify
       - name: Deploy
         id: deploy
@@ -66,6 +64,4 @@ jobs:
           skip_app_build: true
           app_location: "/knowledgebase/public" # App source code path
           api_location: "" # Api source code path - optional
-          output_location: "" # Built app content directory - optional
-          #app_build_command: "hugo -s knowledgebase -D"
-          ###### End of Repository/Build Configurations ######
+          output_location: "" 
