--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -39,6 +39,7 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           template: ./infra/staticwebapp.bicep
           failOnStdErr: false
+      
               
   build_and_deploy_job:
     needs: provision
@@ -48,6 +49,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: true
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
       - name: Get SWA deployment token
         uses: azure/CLI@v1
         id: swa-token
