--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -32,12 +32,18 @@ jobs:
           inlineScript: |
             az group create -g ${{ secrets.RESOURCE_GROUP }} -l ${{ secrets.RESOURCE_GROUP_LOCATION }}
             
+      - name: Create json from bicep
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            bicep build ./infra/staticwebapp.bicep
+            
       - name: Deploy Bicep
         uses: azure/arm-deploy@v1
         with:
           resourceGroupName: ${{ secrets.RESOURCE_GROUP }}
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          template: ./infra/staticwebapp.bicep
+          template: ./infra/staticwebapp.json
           failOnStdErr: false
       
               
