--- a/.github/workflows/azure-static-web-app.yml
+++ b/.github/workflows/azure-static-web-app.yml
@@ -33,7 +33,7 @@ jobs:
             az group create -g ${{ secrets.RESOURCE_GROUP }} -l ${{ secrets.RESOURCE_GROUP_LOCATION }}
             
       - name: Create json from bicep
-        uses: azure/CLI@v1
+        uses: azure/arm-deploy@v1
         with:
           inlineScript: |
             bicep build ./infra/staticwebapp.bicep
