cicd: add custom domain to web app

--- a/infra/settings.json
+++ b/infra/settings.json
@@ -1,4 +1,5 @@
 {
     "solutionName": "KnowledgeBase",
-    "location": "westeurope"
+    "location": "westeurope",
+    "customDomain": "knowledge.duijzer.com"
 }
