cicd: add multiple custom domains

--- a/infra/settings.json
+++ b/infra/settings.json
@@ -1,5 +1,6 @@
 {
     "solutionName": "KnowledgeBase",
     "location": "westeurope",
-    "customDomain": "knowledge.duijzer.com"
+    "customDomain1": "ashy-water-02682a303.2.azurestaticapps.net",
+    "customDomain2": "knowledge.duijzer.com"
 }
