cicd: remove original do0main

--- a/infra/settings.json
+++ b/infra/settings.json
@@ -1,6 +1,5 @@
 {
     "solutionName": "KnowledgeBase",
     "location": "westeurope",
-    "customDomain1": "ashy-water-02682a303.2.azurestaticapps.net",
-    "customDomain2": "knowledge.duijzer.com"
+    "customDomain": "knowledge.duijzer.com"
 }
